--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.magentys</groupId>
-  <artifactId>bilapp-be</artifactId>
+  <artifactId>installabill-backend</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
 
